@@ -562,6 +562,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 21116) MediaWiki:Templatesused, MediaWiki:Templatesusedpreview and
   MediaWiki:Templatesusedsection now support plural
 * (bug 21079) There is no more line wrapping between label and field in Special:Log
+* (bug 20256) Fixed SQL errors on Special:Recentchanges and Special:Recentchangeslinked
+  on SQLite backend
 
 == API changes in 1.16 ==
 
